// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ItemEditor > snapshots > should render edit mode 1`] = `
<div>
  <section
    class="detail detail--editing"
  >
    <form
      class="detail__form"
    >
      <div
        class="detail__header"
      >
        <h2
          class="detail__title"
        >
          Edit: Test Item
        </h2>
      </div>
      <div
        class="detail__field"
      >
        <label
          class="detail__label"
          for="item-name"
        >
          Name
        </label>
        <input
          autocomplete="off"
          class="detail__input"
          id="item-name"
          placeholder="Item name"
          required=""
          type="text"
          value="Test Item"
        />
      </div>
      <div
        class="detail__field"
      >
        <label
          class="detail__label"
          for="item-summary"
        >
          Summary
        </label>
        <input
          class="detail__input"
          id="item-summary"
          placeholder="Brief summary"
          type="text"
          value="Test summary"
        />
      </div>
      <div
        class="detail__field"
      >
        <label
          class="detail__label"
          for="item-description"
        >
          Description
        </label>
        <textarea
          class="detail__textarea"
          id="item-description"
          placeholder="Full description"
          rows="4"
        >
          Test description
        </textarea>
      </div>
      <div
        class="detail__field"
      >
        <label
          class="detail__label"
          for="category-selector"
        >
          Category
        </label>
        <select
          class="detail__input"
          id="category-selector"
        >
          <option
            value=""
          >
            No category
          </option>
          <option
            value="1"
          >
            Category 1
          </option>
          <option
            value="2"
          >
            Category 2
          </option>
        </select>
      </div>
      <div
        class="propertyEditor"
      >
        <label
          class="propertyEditor__label"
        >
          Properties
        </label>
        <div
          class="propertyEditor__list"
        >
          <div
            class="propertyEditor__categoryGroup"
          >
            <div
              class="propertyEditor__categoryHeader"
            >
              General
            </div>
            <div
              class="propertyEditor__row "
            >
              <div
                aria-describedby="DndDescribedBy-0"
                aria-disabled="false"
                aria-roledescription="sortable"
                class="drag-handle"
                role="button"
                tabindex="0"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <circle
                    cx="5"
                    cy="3"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="3"
                    r="1.5"
                  />
                  <circle
                    cx="5"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="5"
                    cy="13"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="13"
                    r="1.5"
                  />
                </svg>
              </div>
              <input
                class="propertyEditor__input propertyEditor__input--category"
                list="property-category-suggestions"
                placeholder="Category"
                type="text"
                value="General"
              />
              <input
                class="propertyEditor__input propertyEditor__input--name"
                list="property-name-suggestions"
                placeholder="Name"
                type="text"
                value="Prop1"
              />
              <input
                class="propertyEditor__input propertyEditor__input--value"
                placeholder="Value"
                type="text"
                value="Value1"
              />
              <button
                aria-label="Remove property"
                class="propertyEditor__remove"
                type="button"
              >
                ×
              </button>
            </div>
            <div
              class="propertyEditor__row "
            >
              <div
                aria-describedby="DndDescribedBy-0"
                aria-disabled="false"
                aria-roledescription="sortable"
                class="drag-handle"
                role="button"
                tabindex="0"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <circle
                    cx="5"
                    cy="3"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="3"
                    r="1.5"
                  />
                  <circle
                    cx="5"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="5"
                    cy="13"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="13"
                    r="1.5"
                  />
                </svg>
              </div>
              <input
                class="propertyEditor__input propertyEditor__input--category"
                list="property-category-suggestions"
                placeholder="Category"
                type="text"
                value="General"
              />
              <input
                class="propertyEditor__input propertyEditor__input--name"
                list="property-name-suggestions"
                placeholder="Name"
                type="text"
                value="Prop2"
              />
              <input
                class="propertyEditor__input propertyEditor__input--value"
                placeholder="Value"
                type="text"
                value="Value2"
              />
              <button
                aria-label="Remove property"
                class="propertyEditor__remove"
                type="button"
              >
                ×
              </button>
            </div>
          </div>
          <div
            class="propertyEditor__categoryGroup"
          >
            <div
              class="propertyEditor__categoryHeader"
            >
              Technical
            </div>
            <div
              class="propertyEditor__row "
            >
              <div
                aria-describedby="DndDescribedBy-0"
                aria-disabled="false"
                aria-roledescription="sortable"
                class="drag-handle"
                role="button"
                tabindex="0"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <circle
                    cx="5"
                    cy="3"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="3"
                    r="1.5"
                  />
                  <circle
                    cx="5"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="5"
                    cy="13"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="13"
                    r="1.5"
                  />
                </svg>
              </div>
              <input
                class="propertyEditor__input propertyEditor__input--category"
                list="property-category-suggestions"
                placeholder="Category"
                type="text"
                value="Technical"
              />
              <input
                class="propertyEditor__input propertyEditor__input--name"
                list="property-name-suggestions"
                placeholder="Name"
                type="text"
                value="Prop3"
              />
              <input
                class="propertyEditor__input propertyEditor__input--value"
                placeholder="Value"
                type="text"
                value="Value3"
              />
              <button
                aria-label="Remove property"
                class="propertyEditor__remove"
                type="button"
              >
                ×
              </button>
            </div>
          </div>
        </div>
        <div
          id="DndDescribedBy-0"
          style="display: none;"
        >
          
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
        </div>
        <div
          aria-atomic="true"
          aria-live="assertive"
          id="DndLiveRegion-0"
          role="status"
          style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
        />
        <button
          class="propertyEditor__add"
          type="button"
        >
          + Add Property
        </button>
        <datalist
          id="property-category-suggestions"
        />
        <datalist
          id="property-name-suggestions"
        />
      </div>
      <div
        class="imageEditor"
      >
        <label
          class="imageEditor__label"
        >
          Images
        </label>
        <div
          class="imageEditor__grid"
        >
          <div
            class="imageEditor__item"
          >
            <div
              class="imageEditor__preview"
            >
              <img
                alt="Image 1"
                class="imageEditor__image"
                src="https://example.com/image1.jpg"
              />
              <button
                aria-label="Remove image"
                class="imageEditor__remove"
                type="button"
              >
                ×
              </button>
            </div>
            <input
              class="imageEditor__input imageEditor__input--alt"
              placeholder="Alt text"
              type="text"
              value="Image 1"
            />
          </div>
          <div
            class="imageEditor__item"
          >
            <div
              class="imageEditor__preview"
            >
              <img
                alt="Image 2"
                class="imageEditor__image"
                src="https://example.com/image2.jpg"
              />
              <button
                aria-label="Remove image"
                class="imageEditor__remove"
                type="button"
              >
                ×
              </button>
            </div>
            <input
              class="imageEditor__input imageEditor__input--alt"
              placeholder="Alt text"
              type="text"
              value="Image 2"
            />
          </div>
        </div>
        <input
          accept="image/jpeg,image/png,image/gif,image/webp"
          class="imageEditor__fileInput"
          multiple=""
          type="file"
        />
        <button
          class="imageEditor__add"
          type="button"
        >
          + Add Image
        </button>
      </div>
      <div
        class="detail__field"
      >
        <div
          class="visibility-toggle"
        >
          <label
            class="visibility-label"
          >
            Visibility
          </label>
          <div
            class="visibility-options"
          >
            <button
              class="visibility-option selected"
              title="Inherit from parent (Private)"
              type="button"
            >
              Inherit (
              Private
              )
            </button>
            <button
              class="visibility-option "
              disabled=""
              title="Mark as public"
              type="button"
            >
              Public
            </button>
            <button
              class="visibility-option "
              title="Mark as private"
              type="button"
            >
              Private
            </button>
          </div>
          <div
            class="visibility-note"
          >
            Parent is private; cannot override to public
          </div>
          <div
            class="visibility-effective"
          >
            Effective: 
            <span
              class="public"
            >
              Public
            </span>
          </div>
        </div>
      </div>
      <fieldset
        class="detail__fieldset"
      >
        <legend
          class="detail__legend"
        >
          My Relationship to This Item
        </legend>
        <div
          class="detail__radioGroup"
        >
          <label
            class="detail__radioLabel"
          >
            <input
              checked=""
              class="detail__radioInput"
              name="userFlag"
              type="radio"
            />
            <span
              class="detail__radioText"
            >
              None
            </span>
          </label>
          <label
            class="detail__radioLabel"
          >
            <input
              class="detail__radioInput"
              name="userFlag"
              type="radio"
            />
            <span
              class="detail__radioText"
            >
              I Have This
            </span>
          </label>
          <label
            class="detail__radioLabel"
          >
            <input
              class="detail__radioInput"
              name="userFlag"
              type="radio"
            />
            <span
              class="detail__radioText"
            >
              I Want This
            </span>
          </label>
          <label
            class="detail__radioLabel"
          >
            <input
              class="detail__radioInput"
              name="userFlag"
              type="radio"
            />
            <span
              class="detail__radioText"
            >
              For Trade/Sale
            </span>
          </label>
        </div>
      </fieldset>
      <div
        class="detail__actions"
      >
        <button
          class="detail__btn detail__btn--primary"
          type="button"
        >
          Save Changes
        </button>
        <button
          class="detail__btn detail__btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </section>
</div>
`;

exports[`ItemEditor > snapshots > should render new item mode 1`] = `
<div>
  <section
    class="detail detail--editing"
  >
    <form
      class="detail__form"
    >
      <div
        class="detail__header"
      >
        <h2
          class="detail__title"
        >
          Add New Item
        </h2>
      </div>
      <div
        class="detail__field"
      >
        <label
          class="detail__label"
          for="item-name"
        >
          Name
        </label>
        <input
          autocomplete="off"
          class="detail__input"
          id="item-name"
          placeholder="Item name"
          required=""
          type="text"
          value=""
        />
      </div>
      <div
        class="detail__field"
      >
        <label
          class="detail__label"
          for="item-summary"
        >
          Summary
        </label>
        <input
          class="detail__input"
          id="item-summary"
          placeholder="Brief summary"
          type="text"
          value=""
        />
      </div>
      <div
        class="detail__field"
      >
        <label
          class="detail__label"
          for="item-description"
        >
          Description
        </label>
        <textarea
          class="detail__textarea"
          id="item-description"
          placeholder="Full description"
          rows="4"
        />
      </div>
      <div
        class="detail__field"
      >
        <label
          class="detail__label"
          for="category-selector"
        >
          Category
        </label>
        <select
          class="detail__input"
          id="category-selector"
        >
          <option
            value=""
          >
            No category
          </option>
          <option
            value="1"
          >
            Category 1
          </option>
          <option
            value="2"
          >
            Category 2
          </option>
        </select>
      </div>
      <div
        class="propertyEditor"
      >
        <label
          class="propertyEditor__label"
        >
          Properties
        </label>
        <div
          class="propertyEditor__empty"
        >
          <p>
            No properties yet. Add properties to describe your item.
          </p>
        </div>
        <button
          class="propertyEditor__add"
          type="button"
        >
          + Add Property
        </button>
        <datalist
          id="property-category-suggestions"
        />
        <datalist
          id="property-name-suggestions"
        />
      </div>
      <div
        class="imageEditor"
      >
        <label
          class="imageEditor__label"
        >
          Images
        </label>
        <div
          class="imageEditor__grid"
        />
        <input
          accept="image/jpeg,image/png,image/gif,image/webp"
          class="imageEditor__fileInput"
          multiple=""
          type="file"
        />
        <button
          class="imageEditor__add"
          type="button"
        >
          + Add Image
        </button>
      </div>
      <div
        class="detail__field"
      >
        <div
          class="visibility-toggle"
        >
          <label
            class="visibility-label"
          >
            Visibility
          </label>
          <div
            class="visibility-options"
          >
            <button
              class="visibility-option selected"
              title="Inherit from parent (Private)"
              type="button"
            >
              Inherit (
              Private
              )
            </button>
            <button
              class="visibility-option "
              disabled=""
              title="Mark as public"
              type="button"
            >
              Public
            </button>
            <button
              class="visibility-option "
              title="Mark as private"
              type="button"
            >
              Private
            </button>
          </div>
          <div
            class="visibility-note"
          >
            Parent is private; cannot override to public
          </div>
          <div
            class="visibility-effective"
          >
            Effective: 
            <span
              class="private"
            >
              Private
            </span>
          </div>
        </div>
      </div>
      <fieldset
        class="detail__fieldset"
      >
        <legend
          class="detail__legend"
        >
          My Relationship to This Item
        </legend>
        <div
          class="detail__radioGroup"
        >
          <label
            class="detail__radioLabel"
          >
            <input
              checked=""
              class="detail__radioInput"
              name="userFlag"
              type="radio"
            />
            <span
              class="detail__radioText"
            >
              None
            </span>
          </label>
          <label
            class="detail__radioLabel"
          >
            <input
              class="detail__radioInput"
              name="userFlag"
              type="radio"
            />
            <span
              class="detail__radioText"
            >
              I Have This
            </span>
          </label>
          <label
            class="detail__radioLabel"
          >
            <input
              class="detail__radioInput"
              name="userFlag"
              type="radio"
            />
            <span
              class="detail__radioText"
            >
              I Want This
            </span>
          </label>
          <label
            class="detail__radioLabel"
          >
            <input
              class="detail__radioInput"
              name="userFlag"
              type="radio"
            />
            <span
              class="detail__radioText"
            >
              For Trade/Sale
            </span>
          </label>
        </div>
      </fieldset>
      <div
        class="detail__actions"
      >
        <button
          class="detail__btn detail__btn--primary"
          disabled=""
          type="button"
        >
          Create Item
        </button>
        <button
          class="detail__btn detail__btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </section>
</div>
`;

exports[`ItemEditor > user flag selector > should render snapshot for new item with user flag selector 1`] = `
<div>
  <section
    class="detail detail--editing"
  >
    <form
      class="detail__form"
    >
      <div
        class="detail__header"
      >
        <h2
          class="detail__title"
        >
          Add New Item
        </h2>
      </div>
      <div
        class="detail__field"
      >
        <label
          class="detail__label"
          for="item-name"
        >
          Name
        </label>
        <input
          autocomplete="off"
          class="detail__input"
          id="item-name"
          placeholder="Item name"
          required=""
          type="text"
          value=""
        />
      </div>
      <div
        class="detail__field"
      >
        <label
          class="detail__label"
          for="item-summary"
        >
          Summary
        </label>
        <input
          class="detail__input"
          id="item-summary"
          placeholder="Brief summary"
          type="text"
          value=""
        />
      </div>
      <div
        class="detail__field"
      >
        <label
          class="detail__label"
          for="item-description"
        >
          Description
        </label>
        <textarea
          class="detail__textarea"
          id="item-description"
          placeholder="Full description"
          rows="4"
        />
      </div>
      <div
        class="detail__field"
      >
        <label
          class="detail__label"
          for="category-selector"
        >
          Category
        </label>
        <select
          class="detail__input"
          id="category-selector"
        >
          <option
            value=""
          >
            No category
          </option>
          <option
            value="1"
          >
            Category 1
          </option>
          <option
            value="2"
          >
            Category 2
          </option>
        </select>
      </div>
      <div
        class="propertyEditor"
      >
        <label
          class="propertyEditor__label"
        >
          Properties
        </label>
        <div
          class="propertyEditor__empty"
        >
          <p>
            No properties yet. Add properties to describe your item.
          </p>
        </div>
        <button
          class="propertyEditor__add"
          type="button"
        >
          + Add Property
        </button>
        <datalist
          id="property-category-suggestions"
        />
        <datalist
          id="property-name-suggestions"
        />
      </div>
      <div
        class="imageEditor"
      >
        <label
          class="imageEditor__label"
        >
          Images
        </label>
        <div
          class="imageEditor__grid"
        />
        <input
          accept="image/jpeg,image/png,image/gif,image/webp"
          class="imageEditor__fileInput"
          multiple=""
          type="file"
        />
        <button
          class="imageEditor__add"
          type="button"
        >
          + Add Image
        </button>
      </div>
      <div
        class="detail__field"
      >
        <div
          class="visibility-toggle"
        >
          <label
            class="visibility-label"
          >
            Visibility
          </label>
          <div
            class="visibility-options"
          >
            <button
              class="visibility-option selected"
              title="Inherit from parent (Private)"
              type="button"
            >
              Inherit (
              Private
              )
            </button>
            <button
              class="visibility-option "
              disabled=""
              title="Mark as public"
              type="button"
            >
              Public
            </button>
            <button
              class="visibility-option "
              title="Mark as private"
              type="button"
            >
              Private
            </button>
          </div>
          <div
            class="visibility-note"
          >
            Parent is private; cannot override to public
          </div>
          <div
            class="visibility-effective"
          >
            Effective: 
            <span
              class="private"
            >
              Private
            </span>
          </div>
        </div>
      </div>
      <fieldset
        class="detail__fieldset"
      >
        <legend
          class="detail__legend"
        >
          My Relationship to This Item
        </legend>
        <div
          class="detail__radioGroup"
        >
          <label
            class="detail__radioLabel"
          >
            <input
              checked=""
              class="detail__radioInput"
              name="userFlag"
              type="radio"
            />
            <span
              class="detail__radioText"
            >
              None
            </span>
          </label>
          <label
            class="detail__radioLabel"
          >
            <input
              class="detail__radioInput"
              name="userFlag"
              type="radio"
            />
            <span
              class="detail__radioText"
            >
              I Have This
            </span>
          </label>
          <label
            class="detail__radioLabel"
          >
            <input
              class="detail__radioInput"
              name="userFlag"
              type="radio"
            />
            <span
              class="detail__radioText"
            >
              I Want This
            </span>
          </label>
          <label
            class="detail__radioLabel"
          >
            <input
              class="detail__radioInput"
              name="userFlag"
              type="radio"
            />
            <span
              class="detail__radioText"
            >
              For Trade/Sale
            </span>
          </label>
        </div>
      </fieldset>
      <div
        class="detail__actions"
      >
        <button
          class="detail__btn detail__btn--primary"
          disabled=""
          type="button"
        >
          Create Item
        </button>
        <button
          class="detail__btn detail__btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </section>
</div>
`;

exports[`ItemEditor > user flag selector > should render snapshot with Have flag selected 1`] = `
<div>
  <section
    class="detail detail--editing"
  >
    <form
      class="detail__form"
    >
      <div
        class="detail__header"
      >
        <h2
          class="detail__title"
        >
          Edit: Test Item
        </h2>
      </div>
      <div
        class="detail__field"
      >
        <label
          class="detail__label"
          for="item-name"
        >
          Name
        </label>
        <input
          autocomplete="off"
          class="detail__input"
          id="item-name"
          placeholder="Item name"
          required=""
          type="text"
          value="Test Item"
        />
      </div>
      <div
        class="detail__field"
      >
        <label
          class="detail__label"
          for="item-summary"
        >
          Summary
        </label>
        <input
          class="detail__input"
          id="item-summary"
          placeholder="Brief summary"
          type="text"
          value="Test summary"
        />
      </div>
      <div
        class="detail__field"
      >
        <label
          class="detail__label"
          for="item-description"
        >
          Description
        </label>
        <textarea
          class="detail__textarea"
          id="item-description"
          placeholder="Full description"
          rows="4"
        >
          Test description
        </textarea>
      </div>
      <div
        class="detail__field"
      >
        <label
          class="detail__label"
          for="category-selector"
        >
          Category
        </label>
        <select
          class="detail__input"
          id="category-selector"
        >
          <option
            value=""
          >
            No category
          </option>
          <option
            value="1"
          >
            Category 1
          </option>
          <option
            value="2"
          >
            Category 2
          </option>
        </select>
      </div>
      <div
        class="propertyEditor"
      >
        <label
          class="propertyEditor__label"
        >
          Properties
        </label>
        <div
          class="propertyEditor__list"
        >
          <div
            class="propertyEditor__categoryGroup"
          >
            <div
              class="propertyEditor__categoryHeader"
            >
              General
            </div>
            <div
              class="propertyEditor__row "
            >
              <div
                aria-describedby="DndDescribedBy-34"
                aria-disabled="false"
                aria-roledescription="sortable"
                class="drag-handle"
                role="button"
                tabindex="0"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <circle
                    cx="5"
                    cy="3"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="3"
                    r="1.5"
                  />
                  <circle
                    cx="5"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="5"
                    cy="13"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="13"
                    r="1.5"
                  />
                </svg>
              </div>
              <input
                class="propertyEditor__input propertyEditor__input--category"
                list="property-category-suggestions"
                placeholder="Category"
                type="text"
                value="General"
              />
              <input
                class="propertyEditor__input propertyEditor__input--name"
                list="property-name-suggestions"
                placeholder="Name"
                type="text"
                value="Prop1"
              />
              <input
                class="propertyEditor__input propertyEditor__input--value"
                placeholder="Value"
                type="text"
                value="Value1"
              />
              <button
                aria-label="Remove property"
                class="propertyEditor__remove"
                type="button"
              >
                ×
              </button>
            </div>
            <div
              class="propertyEditor__row "
            >
              <div
                aria-describedby="DndDescribedBy-34"
                aria-disabled="false"
                aria-roledescription="sortable"
                class="drag-handle"
                role="button"
                tabindex="0"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <circle
                    cx="5"
                    cy="3"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="3"
                    r="1.5"
                  />
                  <circle
                    cx="5"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="5"
                    cy="13"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="13"
                    r="1.5"
                  />
                </svg>
              </div>
              <input
                class="propertyEditor__input propertyEditor__input--category"
                list="property-category-suggestions"
                placeholder="Category"
                type="text"
                value="General"
              />
              <input
                class="propertyEditor__input propertyEditor__input--name"
                list="property-name-suggestions"
                placeholder="Name"
                type="text"
                value="Prop2"
              />
              <input
                class="propertyEditor__input propertyEditor__input--value"
                placeholder="Value"
                type="text"
                value="Value2"
              />
              <button
                aria-label="Remove property"
                class="propertyEditor__remove"
                type="button"
              >
                ×
              </button>
            </div>
          </div>
          <div
            class="propertyEditor__categoryGroup"
          >
            <div
              class="propertyEditor__categoryHeader"
            >
              Technical
            </div>
            <div
              class="propertyEditor__row "
            >
              <div
                aria-describedby="DndDescribedBy-34"
                aria-disabled="false"
                aria-roledescription="sortable"
                class="drag-handle"
                role="button"
                tabindex="0"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <circle
                    cx="5"
                    cy="3"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="3"
                    r="1.5"
                  />
                  <circle
                    cx="5"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="5"
                    cy="13"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="13"
                    r="1.5"
                  />
                </svg>
              </div>
              <input
                class="propertyEditor__input propertyEditor__input--category"
                list="property-category-suggestions"
                placeholder="Category"
                type="text"
                value="Technical"
              />
              <input
                class="propertyEditor__input propertyEditor__input--name"
                list="property-name-suggestions"
                placeholder="Name"
                type="text"
                value="Prop3"
              />
              <input
                class="propertyEditor__input propertyEditor__input--value"
                placeholder="Value"
                type="text"
                value="Value3"
              />
              <button
                aria-label="Remove property"
                class="propertyEditor__remove"
                type="button"
              >
                ×
              </button>
            </div>
          </div>
        </div>
        <div
          id="DndDescribedBy-34"
          style="display: none;"
        >
          
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
        </div>
        <div
          aria-atomic="true"
          aria-live="assertive"
          id="DndLiveRegion-34"
          role="status"
          style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
        />
        <button
          class="propertyEditor__add"
          type="button"
        >
          + Add Property
        </button>
        <datalist
          id="property-category-suggestions"
        />
        <datalist
          id="property-name-suggestions"
        />
      </div>
      <div
        class="imageEditor"
      >
        <label
          class="imageEditor__label"
        >
          Images
        </label>
        <div
          class="imageEditor__grid"
        >
          <div
            class="imageEditor__item"
          >
            <div
              class="imageEditor__preview"
            >
              <img
                alt="Image 1"
                class="imageEditor__image"
                src="https://example.com/image1.jpg"
              />
              <button
                aria-label="Remove image"
                class="imageEditor__remove"
                type="button"
              >
                ×
              </button>
            </div>
            <input
              class="imageEditor__input imageEditor__input--alt"
              placeholder="Alt text"
              type="text"
              value="Image 1"
            />
          </div>
          <div
            class="imageEditor__item"
          >
            <div
              class="imageEditor__preview"
            >
              <img
                alt="Image 2"
                class="imageEditor__image"
                src="https://example.com/image2.jpg"
              />
              <button
                aria-label="Remove image"
                class="imageEditor__remove"
                type="button"
              >
                ×
              </button>
            </div>
            <input
              class="imageEditor__input imageEditor__input--alt"
              placeholder="Alt text"
              type="text"
              value="Image 2"
            />
          </div>
        </div>
        <input
          accept="image/jpeg,image/png,image/gif,image/webp"
          class="imageEditor__fileInput"
          multiple=""
          type="file"
        />
        <button
          class="imageEditor__add"
          type="button"
        >
          + Add Image
        </button>
      </div>
      <div
        class="detail__field"
      >
        <div
          class="visibility-toggle"
        >
          <label
            class="visibility-label"
          >
            Visibility
          </label>
          <div
            class="visibility-options"
          >
            <button
              class="visibility-option selected"
              title="Inherit from parent (Private)"
              type="button"
            >
              Inherit (
              Private
              )
            </button>
            <button
              class="visibility-option "
              disabled=""
              title="Mark as public"
              type="button"
            >
              Public
            </button>
            <button
              class="visibility-option "
              title="Mark as private"
              type="button"
            >
              Private
            </button>
          </div>
          <div
            class="visibility-note"
          >
            Parent is private; cannot override to public
          </div>
          <div
            class="visibility-effective"
          >
            Effective: 
            <span
              class="public"
            >
              Public
            </span>
          </div>
        </div>
      </div>
      <fieldset
        class="detail__fieldset"
      >
        <legend
          class="detail__legend"
        >
          My Relationship to This Item
        </legend>
        <div
          class="detail__radioGroup"
        >
          <label
            class="detail__radioLabel"
          >
            <input
              class="detail__radioInput"
              name="userFlag"
              type="radio"
            />
            <span
              class="detail__radioText"
            >
              None
            </span>
          </label>
          <label
            class="detail__radioLabel"
          >
            <input
              checked=""
              class="detail__radioInput"
              name="userFlag"
              type="radio"
            />
            <span
              class="detail__radioText"
            >
              I Have This
            </span>
          </label>
          <label
            class="detail__radioLabel"
          >
            <input
              class="detail__radioInput"
              name="userFlag"
              type="radio"
            />
            <span
              class="detail__radioText"
            >
              I Want This
            </span>
          </label>
          <label
            class="detail__radioLabel"
          >
            <input
              class="detail__radioInput"
              name="userFlag"
              type="radio"
            />
            <span
              class="detail__radioText"
            >
              For Trade/Sale
            </span>
          </label>
        </div>
      </fieldset>
      <div
        class="detail__actions"
      >
        <button
          class="detail__btn detail__btn--primary"
          type="button"
        >
          Save Changes
        </button>
        <button
          class="detail__btn detail__btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </section>
</div>
`;

exports[`ItemEditor > user flag selector > should render snapshot with Want flag selected 1`] = `
<div>
  <section
    class="detail detail--editing"
  >
    <form
      class="detail__form"
    >
      <div
        class="detail__header"
      >
        <h2
          class="detail__title"
        >
          Edit: Test Item
        </h2>
      </div>
      <div
        class="detail__field"
      >
        <label
          class="detail__label"
          for="item-name"
        >
          Name
        </label>
        <input
          autocomplete="off"
          class="detail__input"
          id="item-name"
          placeholder="Item name"
          required=""
          type="text"
          value="Test Item"
        />
      </div>
      <div
        class="detail__field"
      >
        <label
          class="detail__label"
          for="item-summary"
        >
          Summary
        </label>
        <input
          class="detail__input"
          id="item-summary"
          placeholder="Brief summary"
          type="text"
          value="Test summary"
        />
      </div>
      <div
        class="detail__field"
      >
        <label
          class="detail__label"
          for="item-description"
        >
          Description
        </label>
        <textarea
          class="detail__textarea"
          id="item-description"
          placeholder="Full description"
          rows="4"
        >
          Test description
        </textarea>
      </div>
      <div
        class="detail__field"
      >
        <label
          class="detail__label"
          for="category-selector"
        >
          Category
        </label>
        <select
          class="detail__input"
          id="category-selector"
        >
          <option
            value=""
          >
            No category
          </option>
          <option
            value="1"
          >
            Category 1
          </option>
          <option
            value="2"
          >
            Category 2
          </option>
        </select>
      </div>
      <div
        class="propertyEditor"
      >
        <label
          class="propertyEditor__label"
        >
          Properties
        </label>
        <div
          class="propertyEditor__list"
        >
          <div
            class="propertyEditor__categoryGroup"
          >
            <div
              class="propertyEditor__categoryHeader"
            >
              General
            </div>
            <div
              class="propertyEditor__row "
            >
              <div
                aria-describedby="DndDescribedBy-35"
                aria-disabled="false"
                aria-roledescription="sortable"
                class="drag-handle"
                role="button"
                tabindex="0"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <circle
                    cx="5"
                    cy="3"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="3"
                    r="1.5"
                  />
                  <circle
                    cx="5"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="5"
                    cy="13"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="13"
                    r="1.5"
                  />
                </svg>
              </div>
              <input
                class="propertyEditor__input propertyEditor__input--category"
                list="property-category-suggestions"
                placeholder="Category"
                type="text"
                value="General"
              />
              <input
                class="propertyEditor__input propertyEditor__input--name"
                list="property-name-suggestions"
                placeholder="Name"
                type="text"
                value="Prop1"
              />
              <input
                class="propertyEditor__input propertyEditor__input--value"
                placeholder="Value"
                type="text"
                value="Value1"
              />
              <button
                aria-label="Remove property"
                class="propertyEditor__remove"
                type="button"
              >
                ×
              </button>
            </div>
            <div
              class="propertyEditor__row "
            >
              <div
                aria-describedby="DndDescribedBy-35"
                aria-disabled="false"
                aria-roledescription="sortable"
                class="drag-handle"
                role="button"
                tabindex="0"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <circle
                    cx="5"
                    cy="3"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="3"
                    r="1.5"
                  />
                  <circle
                    cx="5"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="5"
                    cy="13"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="13"
                    r="1.5"
                  />
                </svg>
              </div>
              <input
                class="propertyEditor__input propertyEditor__input--category"
                list="property-category-suggestions"
                placeholder="Category"
                type="text"
                value="General"
              />
              <input
                class="propertyEditor__input propertyEditor__input--name"
                list="property-name-suggestions"
                placeholder="Name"
                type="text"
                value="Prop2"
              />
              <input
                class="propertyEditor__input propertyEditor__input--value"
                placeholder="Value"
                type="text"
                value="Value2"
              />
              <button
                aria-label="Remove property"
                class="propertyEditor__remove"
                type="button"
              >
                ×
              </button>
            </div>
          </div>
          <div
            class="propertyEditor__categoryGroup"
          >
            <div
              class="propertyEditor__categoryHeader"
            >
              Technical
            </div>
            <div
              class="propertyEditor__row "
            >
              <div
                aria-describedby="DndDescribedBy-35"
                aria-disabled="false"
                aria-roledescription="sortable"
                class="drag-handle"
                role="button"
                tabindex="0"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <circle
                    cx="5"
                    cy="3"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="3"
                    r="1.5"
                  />
                  <circle
                    cx="5"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="5"
                    cy="13"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="13"
                    r="1.5"
                  />
                </svg>
              </div>
              <input
                class="propertyEditor__input propertyEditor__input--category"
                list="property-category-suggestions"
                placeholder="Category"
                type="text"
                value="Technical"
              />
              <input
                class="propertyEditor__input propertyEditor__input--name"
                list="property-name-suggestions"
                placeholder="Name"
                type="text"
                value="Prop3"
              />
              <input
                class="propertyEditor__input propertyEditor__input--value"
                placeholder="Value"
                type="text"
                value="Value3"
              />
              <button
                aria-label="Remove property"
                class="propertyEditor__remove"
                type="button"
              >
                ×
              </button>
            </div>
          </div>
        </div>
        <div
          id="DndDescribedBy-35"
          style="display: none;"
        >
          
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
        </div>
        <div
          aria-atomic="true"
          aria-live="assertive"
          id="DndLiveRegion-35"
          role="status"
          style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
        />
        <button
          class="propertyEditor__add"
          type="button"
        >
          + Add Property
        </button>
        <datalist
          id="property-category-suggestions"
        />
        <datalist
          id="property-name-suggestions"
        />
      </div>
      <div
        class="imageEditor"
      >
        <label
          class="imageEditor__label"
        >
          Images
        </label>
        <div
          class="imageEditor__grid"
        >
          <div
            class="imageEditor__item"
          >
            <div
              class="imageEditor__preview"
            >
              <img
                alt="Image 1"
                class="imageEditor__image"
                src="https://example.com/image1.jpg"
              />
              <button
                aria-label="Remove image"
                class="imageEditor__remove"
                type="button"
              >
                ×
              </button>
            </div>
            <input
              class="imageEditor__input imageEditor__input--alt"
              placeholder="Alt text"
              type="text"
              value="Image 1"
            />
          </div>
          <div
            class="imageEditor__item"
          >
            <div
              class="imageEditor__preview"
            >
              <img
                alt="Image 2"
                class="imageEditor__image"
                src="https://example.com/image2.jpg"
              />
              <button
                aria-label="Remove image"
                class="imageEditor__remove"
                type="button"
              >
                ×
              </button>
            </div>
            <input
              class="imageEditor__input imageEditor__input--alt"
              placeholder="Alt text"
              type="text"
              value="Image 2"
            />
          </div>
        </div>
        <input
          accept="image/jpeg,image/png,image/gif,image/webp"
          class="imageEditor__fileInput"
          multiple=""
          type="file"
        />
        <button
          class="imageEditor__add"
          type="button"
        >
          + Add Image
        </button>
      </div>
      <div
        class="detail__field"
      >
        <div
          class="visibility-toggle"
        >
          <label
            class="visibility-label"
          >
            Visibility
          </label>
          <div
            class="visibility-options"
          >
            <button
              class="visibility-option selected"
              title="Inherit from parent (Private)"
              type="button"
            >
              Inherit (
              Private
              )
            </button>
            <button
              class="visibility-option "
              disabled=""
              title="Mark as public"
              type="button"
            >
              Public
            </button>
            <button
              class="visibility-option "
              title="Mark as private"
              type="button"
            >
              Private
            </button>
          </div>
          <div
            class="visibility-note"
          >
            Parent is private; cannot override to public
          </div>
          <div
            class="visibility-effective"
          >
            Effective: 
            <span
              class="public"
            >
              Public
            </span>
          </div>
        </div>
      </div>
      <fieldset
        class="detail__fieldset"
      >
        <legend
          class="detail__legend"
        >
          My Relationship to This Item
        </legend>
        <div
          class="detail__radioGroup"
        >
          <label
            class="detail__radioLabel"
          >
            <input
              class="detail__radioInput"
              name="userFlag"
              type="radio"
            />
            <span
              class="detail__radioText"
            >
              None
            </span>
          </label>
          <label
            class="detail__radioLabel"
          >
            <input
              class="detail__radioInput"
              name="userFlag"
              type="radio"
            />
            <span
              class="detail__radioText"
            >
              I Have This
            </span>
          </label>
          <label
            class="detail__radioLabel"
          >
            <input
              checked=""
              class="detail__radioInput"
              name="userFlag"
              type="radio"
            />
            <span
              class="detail__radioText"
            >
              I Want This
            </span>
          </label>
          <label
            class="detail__radioLabel"
          >
            <input
              class="detail__radioInput"
              name="userFlag"
              type="radio"
            />
            <span
              class="detail__radioText"
            >
              For Trade/Sale
            </span>
          </label>
        </div>
      </fieldset>
      <div
        class="detail__actions"
      >
        <button
          class="detail__btn detail__btn--primary"
          type="button"
        >
          Save Changes
        </button>
        <button
          class="detail__btn detail__btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </section>
</div>
`;

exports[`ItemEditor > user flag selector > should render snapshot with user flag selector 1`] = `
<div>
  <section
    class="detail detail--editing"
  >
    <form
      class="detail__form"
    >
      <div
        class="detail__header"
      >
        <h2
          class="detail__title"
        >
          Edit: Test Item
        </h2>
      </div>
      <div
        class="detail__field"
      >
        <label
          class="detail__label"
          for="item-name"
        >
          Name
        </label>
        <input
          autocomplete="off"
          class="detail__input"
          id="item-name"
          placeholder="Item name"
          required=""
          type="text"
          value="Test Item"
        />
      </div>
      <div
        class="detail__field"
      >
        <label
          class="detail__label"
          for="item-summary"
        >
          Summary
        </label>
        <input
          class="detail__input"
          id="item-summary"
          placeholder="Brief summary"
          type="text"
          value="Test summary"
        />
      </div>
      <div
        class="detail__field"
      >
        <label
          class="detail__label"
          for="item-description"
        >
          Description
        </label>
        <textarea
          class="detail__textarea"
          id="item-description"
          placeholder="Full description"
          rows="4"
        >
          Test description
        </textarea>
      </div>
      <div
        class="detail__field"
      >
        <label
          class="detail__label"
          for="category-selector"
        >
          Category
        </label>
        <select
          class="detail__input"
          id="category-selector"
        >
          <option
            value=""
          >
            No category
          </option>
          <option
            value="1"
          >
            Category 1
          </option>
          <option
            value="2"
          >
            Category 2
          </option>
        </select>
      </div>
      <div
        class="propertyEditor"
      >
        <label
          class="propertyEditor__label"
        >
          Properties
        </label>
        <div
          class="propertyEditor__list"
        >
          <div
            class="propertyEditor__categoryGroup"
          >
            <div
              class="propertyEditor__categoryHeader"
            >
              General
            </div>
            <div
              class="propertyEditor__row "
            >
              <div
                aria-describedby="DndDescribedBy-33"
                aria-disabled="false"
                aria-roledescription="sortable"
                class="drag-handle"
                role="button"
                tabindex="0"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <circle
                    cx="5"
                    cy="3"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="3"
                    r="1.5"
                  />
                  <circle
                    cx="5"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="5"
                    cy="13"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="13"
                    r="1.5"
                  />
                </svg>
              </div>
              <input
                class="propertyEditor__input propertyEditor__input--category"
                list="property-category-suggestions"
                placeholder="Category"
                type="text"
                value="General"
              />
              <input
                class="propertyEditor__input propertyEditor__input--name"
                list="property-name-suggestions"
                placeholder="Name"
                type="text"
                value="Prop1"
              />
              <input
                class="propertyEditor__input propertyEditor__input--value"
                placeholder="Value"
                type="text"
                value="Value1"
              />
              <button
                aria-label="Remove property"
                class="propertyEditor__remove"
                type="button"
              >
                ×
              </button>
            </div>
            <div
              class="propertyEditor__row "
            >
              <div
                aria-describedby="DndDescribedBy-33"
                aria-disabled="false"
                aria-roledescription="sortable"
                class="drag-handle"
                role="button"
                tabindex="0"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <circle
                    cx="5"
                    cy="3"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="3"
                    r="1.5"
                  />
                  <circle
                    cx="5"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="5"
                    cy="13"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="13"
                    r="1.5"
                  />
                </svg>
              </div>
              <input
                class="propertyEditor__input propertyEditor__input--category"
                list="property-category-suggestions"
                placeholder="Category"
                type="text"
                value="General"
              />
              <input
                class="propertyEditor__input propertyEditor__input--name"
                list="property-name-suggestions"
                placeholder="Name"
                type="text"
                value="Prop2"
              />
              <input
                class="propertyEditor__input propertyEditor__input--value"
                placeholder="Value"
                type="text"
                value="Value2"
              />
              <button
                aria-label="Remove property"
                class="propertyEditor__remove"
                type="button"
              >
                ×
              </button>
            </div>
          </div>
          <div
            class="propertyEditor__categoryGroup"
          >
            <div
              class="propertyEditor__categoryHeader"
            >
              Technical
            </div>
            <div
              class="propertyEditor__row "
            >
              <div
                aria-describedby="DndDescribedBy-33"
                aria-disabled="false"
                aria-roledescription="sortable"
                class="drag-handle"
                role="button"
                tabindex="0"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <circle
                    cx="5"
                    cy="3"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="3"
                    r="1.5"
                  />
                  <circle
                    cx="5"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="5"
                    cy="13"
                    r="1.5"
                  />
                  <circle
                    cx="11"
                    cy="13"
                    r="1.5"
                  />
                </svg>
              </div>
              <input
                class="propertyEditor__input propertyEditor__input--category"
                list="property-category-suggestions"
                placeholder="Category"
                type="text"
                value="Technical"
              />
              <input
                class="propertyEditor__input propertyEditor__input--name"
                list="property-name-suggestions"
                placeholder="Name"
                type="text"
                value="Prop3"
              />
              <input
                class="propertyEditor__input propertyEditor__input--value"
                placeholder="Value"
                type="text"
                value="Value3"
              />
              <button
                aria-label="Remove property"
                class="propertyEditor__remove"
                type="button"
              >
                ×
              </button>
            </div>
          </div>
        </div>
        <div
          id="DndDescribedBy-33"
          style="display: none;"
        >
          
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
        </div>
        <div
          aria-atomic="true"
          aria-live="assertive"
          id="DndLiveRegion-33"
          role="status"
          style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
        />
        <button
          class="propertyEditor__add"
          type="button"
        >
          + Add Property
        </button>
        <datalist
          id="property-category-suggestions"
        />
        <datalist
          id="property-name-suggestions"
        />
      </div>
      <div
        class="imageEditor"
      >
        <label
          class="imageEditor__label"
        >
          Images
        </label>
        <div
          class="imageEditor__grid"
        >
          <div
            class="imageEditor__item"
          >
            <div
              class="imageEditor__preview"
            >
              <img
                alt="Image 1"
                class="imageEditor__image"
                src="https://example.com/image1.jpg"
              />
              <button
                aria-label="Remove image"
                class="imageEditor__remove"
                type="button"
              >
                ×
              </button>
            </div>
            <input
              class="imageEditor__input imageEditor__input--alt"
              placeholder="Alt text"
              type="text"
              value="Image 1"
            />
          </div>
          <div
            class="imageEditor__item"
          >
            <div
              class="imageEditor__preview"
            >
              <img
                alt="Image 2"
                class="imageEditor__image"
                src="https://example.com/image2.jpg"
              />
              <button
                aria-label="Remove image"
                class="imageEditor__remove"
                type="button"
              >
                ×
              </button>
            </div>
            <input
              class="imageEditor__input imageEditor__input--alt"
              placeholder="Alt text"
              type="text"
              value="Image 2"
            />
          </div>
        </div>
        <input
          accept="image/jpeg,image/png,image/gif,image/webp"
          class="imageEditor__fileInput"
          multiple=""
          type="file"
        />
        <button
          class="imageEditor__add"
          type="button"
        >
          + Add Image
        </button>
      </div>
      <div
        class="detail__field"
      >
        <div
          class="visibility-toggle"
        >
          <label
            class="visibility-label"
          >
            Visibility
          </label>
          <div
            class="visibility-options"
          >
            <button
              class="visibility-option selected"
              title="Inherit from parent (Private)"
              type="button"
            >
              Inherit (
              Private
              )
            </button>
            <button
              class="visibility-option "
              disabled=""
              title="Mark as public"
              type="button"
            >
              Public
            </button>
            <button
              class="visibility-option "
              title="Mark as private"
              type="button"
            >
              Private
            </button>
          </div>
          <div
            class="visibility-note"
          >
            Parent is private; cannot override to public
          </div>
          <div
            class="visibility-effective"
          >
            Effective: 
            <span
              class="public"
            >
              Public
            </span>
          </div>
        </div>
      </div>
      <fieldset
        class="detail__fieldset"
      >
        <legend
          class="detail__legend"
        >
          My Relationship to This Item
        </legend>
        <div
          class="detail__radioGroup"
        >
          <label
            class="detail__radioLabel"
          >
            <input
              checked=""
              class="detail__radioInput"
              name="userFlag"
              type="radio"
            />
            <span
              class="detail__radioText"
            >
              None
            </span>
          </label>
          <label
            class="detail__radioLabel"
          >
            <input
              class="detail__radioInput"
              name="userFlag"
              type="radio"
            />
            <span
              class="detail__radioText"
            >
              I Have This
            </span>
          </label>
          <label
            class="detail__radioLabel"
          >
            <input
              class="detail__radioInput"
              name="userFlag"
              type="radio"
            />
            <span
              class="detail__radioText"
            >
              I Want This
            </span>
          </label>
          <label
            class="detail__radioLabel"
          >
            <input
              class="detail__radioInput"
              name="userFlag"
              type="radio"
            />
            <span
              class="detail__radioText"
            >
              For Trade/Sale
            </span>
          </label>
        </div>
      </fieldset>
      <div
        class="detail__actions"
      >
        <button
          class="detail__btn detail__btn--primary"
          type="button"
        >
          Save Changes
        </button>
        <button
          class="detail__btn detail__btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </section>
</div>
`;
